Style navigation drawer

--- a/app/src/main/assets/projects.json
+++ b/app/src/main/assets/projects.json
@@ -6,7 +6,7 @@
   },
   {
     "uuid": "6f733b10-d7c1-4e00-ae63-75b9bc284849",
-    "name": "Project Beta",
+    "name": "Beta",
     "description": "This is project Beta."
   }
 ]
