--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,30 +22,30 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      - name: Build Project
-        run: ./gradlew assemble
+#      - name: Build Project
+#        run: ./gradlew assemble
+#
+#      - name: Create Release
+#        id: create_release
+#        uses: actions/create-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          tag_name: ${{ github.ref }}
+#          release_name: Release ${{ github.ref }}
+#          body: |
+#            See commits for changes
+#          draft: false
+#          prerelease: false
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            See commits for changes
-          draft: false
-          prerelease: false
+#      - name: Build Debug APK
+#        run: bash ./gradlew :app:assembleDebug
 
-      - name: Build Debug APK
-        run: bash ./gradlew :app:assembleDebug
-
-      - name: build release
-        run: ./gradlew assembleRelease
+      - name: Build Debug
+        run: ./gradlew build
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: App
-          path: ${{ github.workspace}} /app/build/outputs/apk/release/app-release.apk
+          name: app
+          path: /app/build/outputs/apk/debug/app-debug.apk
