Add firebase dependencies

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,7 @@
-/build
+/build/generated
+/build/intermediates
+/build/kotlin
+/build/reports
+/build/test-results
+/build/tmp
+google-services.json
