--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,13 @@ jobs:
         with:
           java-version: 11
 
+      - name: Create file
+        run: cat /home/runner/work/push-alerts-app/app/google-services.json | base64
+
+      - name: Putting data
+        env:
+          DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $DATA > /home/runner/work/push-alerts-app/app/google-services.json
+
       - name: Run unit tests
         run: bash ./gradlew test --stacktrace
