--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,12 +19,12 @@ jobs:
           java-version: 11
 
       - name: Create file
-        run: cat /home/runner/work/push-alerts-app/app/google-services.json | base64
+        run: cat ./app/google-services.json | base64
 
       - name: Putting data
         env:
           DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: echo $DATA > /home/runner/work/push-alerts-app/app/google-services.json
+        run: echo $DATA > ./app/google-services.json
 
       - name: Run unit tests
         run: bash ./gradlew test --stacktrace
