--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,14 @@ jobs:
         with:
           java-version: 11
 
+      - name: Create google-services.json file
+        run: cat ./app/google-services.json | base64
+
+      - name: Putting data into google-services.json
+        env:
+          DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $DATA > ./app/google-services.json
+
       - name: Run unit tests
         run: bash ./gradlew test --stacktrace
 
