--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           java-version: 11
 
-      - name: Create file
+      - name: Create google-services.json file
         run: cat ./app/google-services.json | base64
 
-      - name: Putting data
+      - name: Putting data into google-services.json
         env:
           DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
         run: echo $DATA > ./app/google-services.json
