--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
     // Firebase
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.2'
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha03'
 
     // Unit Tests
     testImplementation 'androidx.test:core:1.4.0'
