--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/schindlerlogo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/schindlerlogo"
@@ -28,7 +27,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.PushAlerts.NoActionBar"
             android:windowSoftInputMode="adjustNothing" />
